Changed color of figures

--- a/thesis/appendix.tex
+++ b/thesis/appendix.tex
@@ -218,7 +218,7 @@ The parameter steer\_limit will be read from a configuration file. The limit is 
 		\pythoncode{source_files/script_example.py}	
 
 \section{Logger setup schematic}\label{CLS}
-	 \includegraphics[scale=0.5]{csac_logger.pdf}
+	 \includegraphics[scale=0.5]{csac_logger_g.pdf}
 
 \chapter{E-mails}
 \section{Correspondence with Mr. Davis}\label{davis_email}
@@ -253,14 +253,14 @@ On Sun, Oct 23, 2016 at 2:25 PM Aril Schultzen <aschultzen@gmail.com> wrote:
 \chapter{Figures}
 	\begin{figure}
 	\centering
-	  \includegraphics[scale=0.09]{lab_setup.jpg}
+	  \includegraphics[scale=0.09]{lab_setup_g.jpg}
 	   \caption[Photograph of the measuring setup]{Photograph of the system used to measure the 10 MHz output from the atomic clock. Not in the picture is the source of the 10 MHz reference.}
 	   \label{lab_setup_photo}
 	\end{figure}
 
 \begin{figure}[!htb]
 	\centering
-  \includegraphics[scale=0.50]{antenna_foil_cover.jpg}
+  \includegraphics[scale=0.50]{antenna_foil_cover_g.jpg}
   \caption[Antenna covered in aluminium foil]
    {Antenna covered in aluminium foil to simulate a jamming attack.}
    \label{antenna_foil_cover}
