--- a/thesis/intro.tex
+++ b/thesis/intro.tex
@@ -10,26 +10,13 @@ Our goal was to develop a spoof proof atomic clock controller prototype by combi
 \chapter{Background on GPS}
 The Global Positioning System (GPS) is a utility owned by the United States that provides its users with positioning, navigation and timing services. At the end of the sixties, the U.S Navy was developing the Polaris missile, a missile capable of being launched from a submarine. One of the requirements for launching the Polaris missile was exact knowledge of the submarines position. The problem led the Navy and The Applied Physics Laboratory at John Hopkins University to develop the Transit system, the earliest predecessor to the GPS system \cite{SteJ}.
 
-Today, roughly 40 years later, we are surrounded by GPS technology.
-\begin{wrapfigure}{c}{0.45\textwidth}
-  \centering
-  \includegraphics[width=0.40\textwidth]{trilaterate.jpg}
-  \caption[GPS trilaterate figure]
-   {Figure showing how GPS satellites are used to trilaterate to determine a GPS receivers position. Source: \cite{GISTRILATERATE}}
-\end{wrapfigure}
-In fields like emergency response, search and rescue, fleet management and even agriculture, it has become a vital tool of utmost importance to everyday operation. Satellite navigation can be found in most new cars and few phones are today sold without an internal GPS receiver. The European Space Agency estimated that there were 2 billion GPS enabled devices by 2012 \cite{ESA}. What started out as a navigation tool for the U.S navy is now used by millions, if not billions of users both civilian and military all over the globe. A common misconception (that is often reinforced by Hollywood action movies) is that the GPS satellites track \textit{you} by communicating with your GPS receiver. It actually works the other way around. You are, with your GPS receiver, tracking a set of satellites in order to establish your own position. At any given time, there are at least 24 GPS satellites each in its own orbit at about 20,372 nautical miles above your head \cite{GPSGOVSS}. In order for a GPS receiver to determine its position and obtain correct time, it will need four GPS satellites within line of sight \footnote{The line of sight requirement might seem unreasonable, but by the time the signal has reached earth, is has degraded to a minimum of -160 dBW \cite{NATINT}}.
+Today, roughly 40 years later, we are surrounded by GPS technology. In fields like emergency response, search and rescue, fleet management and even agriculture, it has become a vital tool of utmost importance to everyday operation. Satellite navigation can be found in most new cars and few phones are today sold without an internal GPS receiver. The European Space Agency estimated that there were 2 billion GPS enabled devices by 2012 \cite{ESA}. What started out as a navigation tool for the U.S navy is now used by millions, if not billions of users both civilian and military all over the globe. A common misconception (that is often reinforced by Hollywood action movies) is that the GPS satellites track \textit{you} by communicating with your GPS receiver. It actually works the other way around. You are, with your GPS receiver, tracking a set of satellites in order to establish your own position. At any given time, there are at least 24 GPS satellites each in its own orbit at about 20,372 nautical miles above your head \cite{GPSGOVSS}. In order for a GPS receiver to determine its position and obtain correct time, it will need four GPS satellites within line of sight \footnote{The line of sight requirement might seem unreasonable, but by the time the signal has reached earth, is has degraded to a minimum of -160 dBW \cite{NATINT}}.
 The method used by your GPS receiver to determine its position is called \textit{trilateration}. 
 Trilateration is used in geometry as a process of determining the location (absolute or relative) of a point by measuring distance. It is often confused with triangulation which instead of distance, uses angles. Measuring the distance from the GPS satellites to a given position on earth is quite simple when using the equation: 
 \begin{equation} Distance = Rate \times Time \end{equation} 
 The equation is simple to solve, first we need the rate. In this context the \textit{rate} is how fast the signals travel. This is equal to the speed of light (299,792,458 m/s). The time the signal has used traveling from the satellite to earth can be obtained by analyzing the signal itself. A simple and slightly inaccurate description is that the signal contains a "time stamp" of when the signal was sent. By comparing this time stamp with the current time one can calculate the age of the signal and therefor how long it has spent traveling. This is explained in greater detail under (\ref{GST}) \cite{GPSGOVTE}.  
 
 \section{Clocks}
-\begin{wrapfigure}{c}{0.35\textwidth}
-  \centering
-  \includegraphics[width=0.30\textwidth]{cscrystals.jpg}
-  \caption[Caesium ampule]
-   {High pure Caesium crystals in ampule under argon. Source: \cite{DENCES}}
-\end{wrapfigure} 
 What does a 10 USD wristwatch and a 100,000 USD atomic clock have in common? They do not stay accurate forever. This phenomena known as \textit{frequency drift}, is when a clock no longer runs at the exact same speed as a reference clock and they drift apart. This property is a result of how they track time. In essence, all clocks work in the same way. They have a part that oscillates, a way to count the number of oscillations and a way to show the count. If we transfer this analogy to the typical "grandfather clock", the pendulum would be the oscillator, the counting mechanism the clockwork and the clock face and dials would be the display. In a typical wristwatch, the oscillator is a quartz crystal powered by a battery. The frequency of which the crystal oscillates is then divided down to a single Hertz by simple electronics. The purity of the crystal is among the decisive factors determining the accuracy of the clock. \cite{CSMG}. Although a completely different beast, the same principles apply to the atomic clock which uses the microwave radiation that electrons in atoms emit when they change energy levels. One of the most commonly used elements in atomic clocks, is \textit{caesium-133}, an isotope of caesium.\footnote{1 second equals 9,192, 631,770 cycles of the Cs-133 transition} \cite{HP}.
 
 \section{GPS signals and Time}\label{GST}
