--- a/thesis/software.tex
+++ b/thesis/software.tex
@@ -102,7 +102,7 @@ The "Server core" is the main process and the parent of every process created du
 \subsection{Clock model implementation}\label{csac_model}
 \begin{figure}
 \centering
-  \includegraphics[scale=0.30]{csac_model.pdf}
+  \includegraphics[scale=0.30]{csac_model_bw.pdf}
    \caption[Execution flow the clock model]{Block diagram showing the flow of execution in the atomic clock model}
    \label{figure_csac_model}
 \end{figure}
