--- a/thesis/discussion.tex
+++ b/thesis/discussion.tex
@@ -34,8 +34,8 @@ The atomic clock controller software was originally planned to be written in Jav
 \section{Alternative approaches}\label{da}
 When planning on how to execute our proposal, these were among the ideas that came up. 
 
-\subsection{Single computer, many GNSS receivers}\label{scmgr}
-A single computer is used to run the atomic clock controller software. The atomic clock controller does not include a Server/Cient model, but the receivers used to collect data are all connected to to the computer through whatever USB ports available or made available by the use of USB hubs. With this approach, you are not dependent on a network, but it limits the number of GNSS receivers you could connect as the USB specification limits the number possible endpoints to an absolute 127(\cite[pp. 3]{USBTC}) because of addressing. This does not mean that 127 devices can be connected, a single device might use more than one endpoint. It's also worth mentioning that a USB hub might "reserve" multiple endpoints. Depending on the GNSS receivers and how they are made, this number might be reduced even further by the power usage of the connected devices. Depending on how far each GNSS receiver is distanced from the atomic clock controller, a signal amplifier might be necessary to compensate for the signal attenuation. In some cases where a network is absent, this approach might be only option.
+\subsection{Single computer, many GPS receivers}\label{scmgr}
+A single computer is used to run the atomic clock controller software. The atomic clock controller does not include a server/cient model, but the receivers used to collect data are all connected to to the computer through whatever USB ports available or made available by the use of USB hubs. With this approach you are not dependent on a network, but it limits the number of GPS receivers you could connect as the USB specification limits the number possible endpoints to an absolute 127(\cite[pp. 3]{USBTC}) because of addressing. This does not mean that 127 devices can be connected because a single device might use more than one endpoint. It is also worth mentioning that a USB hub might "reserve" multiple endpoints. Depending on the GPS receivers and how they are made, this number might be reduced even further by the power usage of the connected devices. Depending on how far each GPS receiver is distanced from the atomic clock controller, a signal amplifier might be necessary to compensate for the signal attenuation. In some cases where a network is absent, this approach might be only option.
 
 \subsection{Store in database and analyze}
-With this approach, the idea of a GNSS receiver and RASPI as a single "sensor" unit is the same as with Client-server approach. The difference is that it with this approach, each sensor stores the collected data in a database. The atomic clock controller software monitors the clock directly as with the Client-server approach, but the data in the database is routinely queried and analyzed. The strength with this approach is that data is easily stored, shared and maintained by a single entity. The complexity of the client software would be the same as with Client-server approach, but the atomic clock controller software could be implemented with less complexity as no Client-server architecture or shared memory schemes would be necessary. During planning, this approach seemed promising but was rejected because it was thought that it might not be time-sensitive enough. It was also some doubt concerning whether or not the ability to store data to a database actually was important. Once the different filters and algorithms was in place, it turned that the database functionality would have been nice, but not of any real importance for the atomic clock controller to perform it's tasks, and would have been overkill anyway.
+With this approach, the idea of a GPS receiver and Raspberry PI as a single "sensor" unit is the same as with sensor server approach. The difference is that each sensor stores the collected data in a database. The atomic clock controller software monitors the clock directly as with the sensor server approach, but the data in the database is routinely queried and analyzed. The strength with this approach is that data is easily stored, shared and maintained by a single entity. The complexity of the client software would be the same as with the sensor server approach, but the atomic clock controller software could be implemented with less complexity as no client/server architecture or shared memory schemes would be necessary. During planning this approach seemed promising but was rejected because it was thought that it might not be time-sensitive enough. It was also some doubt concerning whether or not the ability to store data to a database actually was important. Once the different filters and algorithms was in place, it turned that the database functionality would have been nice but not of any real importance for the atomic clock controller to perform its tasks.
