--- a/thesis/refs.bib
+++ b/thesis/refs.bib
@@ -1,3 +1,11 @@
+@article{PMU_DEEP,
+  author = "Daniel P. Shepard, Todd E. Humphreys, and Aaron A. Fansler",
+  howpublished = { \url{https://radionavlab.ae.utexas.edu/images/stories/files/papers/going_up_against_time_shepard.pdf} },
+  title = "Going Up Against Time",
+  journal   = "GPS World",
+  year = 2012
+}
+
 @misc{NMEA_MAIN,
   author = "National Marine Electronics Association",
   title = "NMEA 0183 standard",
