--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -157,7 +157,7 @@ program={Informatikk: programmering og nettverk},
 long]
 
 \begin{abstract}
-The goal of this project was to create a prototype of a smart atomic clock controller running on commodity hardware, capable of spoof proofing a GPS controlled atomic clock, i.e harden it against GPS jamming and spoofing attacks. The project aims to use a multi-layered approach to evaluate the integrity of GPS signals and to use knowledge about the atomic clock and its behavior when GPS disciplined, to detect and mitigate a spoofing attack. We aim to demonstrate the efficiency of network enabling commodity GPS receivers and connecting them to a atomic clock controller by using a client/server architecture facilitating GPS and atomic clock data analysis. The preliminary GPS manipulation tests demonstrates the feasibility of the system.
+The goal of this project was to create a prototype of a smart atomic clock controller running on commodity hardware, capable of spoof proofing a GPS controlled atomic clock, i.e harden it against GPS jamming and spoofing attacks. The project aims to use a multi-layered approach to evaluate the integrity of GPS signals and to use knowledge about the atomic clock and its behavior when GPS disciplined to detect and mitigate a spoofing attack. We aim to demonstrate the efficiency of network enabling commodity GPS receivers and connecting them to a atomic clock controller by using a client/server architecture facilitating GPS and atomic clock data analysis. The preliminary GPS manipulation tests demonstrates the feasibility of our proposal.
 \end{abstract}
 
 % Where = hvor
